--- a/Mercadinho/Mercadinho.csproj
+++ b/Mercadinho/Mercadinho.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="itext7" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
